<resources>
    <string name="app_name">AndroidAcademyProject</string>
    <string name="back_text_view">Back</string>
    <string name="title_avengers">Avengers:\nEnd Game</string>
    <string name="description_text">After the devastating events of Avengers: Infinity War, the universe is in ruins.
        With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos
        actions and restore balance to the universe.</string>
    <string name="age_rating">13+</string>
    <string name="genre_text_view">Action, Adveture, Fantasy</string>
    <string name="reviews_text_view">125 REVIEWS</string>
    <string name="storyline_text_view">Storyline</string>
    <string name="cast_text_view">Cast</string>
    <string name="age_limit_13">13+</string>
    <string name="avengers_card_title">Avengers: End Game</string>
    <string name="movie_duration_137_min">137 MIN</string>
    <string name="avengers_details_title">Avengers: End Game</string>
    <string name="actor_1_name">Robert Downey Jr.</string>
    <string name="actor_2_name">Chris Evans</string>
    <string name="actor_3_name">Mark Ruffalo</string>
    <string name="actor_4_name">Chris Hemsworth</string>
</resources>