<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="296dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="18dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="8dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_view_color_bg" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_view_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/avengers_preview"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_view_shadow_mask" />

    <TextView
        android:id="@+id/age_limit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/age_background_item"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/age_limit_13"
        android:textColor="@color/text_white_color"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/like_item" />

    <TextView
        android:id="@+id/genre_card_text_view"
        android:layout_width="146dp"
        android:layout_height="12dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="14dp"
        android:gravity="center_vertical"
        android:text="@string/genre_text_view"
        android:textColor="@color/pink"
        android:textSize="8sp" />

    <LinearLayout
        android:id="@+id/reviews_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="228dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="@color/theme_text_grey"
            android:progressTint="@color/pink"
            android:rating="4"/>

        <TextView
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/reviews_text_view"
            android:textColor="@color/theme_text_grey"
            android:textSize="8sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="132dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/avengers_card_title"
        android:textColor="@color/text_white_color"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="154dp"
        android:layout_height="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/movie_duration_137_min"
        android:textColor="@color/text_film_duration_grey"
        android:textSize="8sp"
        android:textStyle="bold" />

</androidx.cardview.widget.CardView>